# exshalos

./: .buildinfo  .dockerignore  .gitignore  Installation.html  Python_API.html  TODO.html  Tutorials.html  build.zig  build.zig.zon  build_backend.py  flake.nix  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: Installation.doctree  Python_API.doctree  TODO.doctree  Tutorials.doctree  environment.pickle  index.doctree
.doctrees/modules/: mock.doctree  simulation.doctree  theory.doctree  util.doctree
.doctrees/tutorials/: halo_bias.doctree  halo_catalogues.doctree  multi_hod.doctree
.github/workflows/: docs_generation.yml  publish_pypi.yml  publish_testpypi.yml
include/halovoid/: finder.hpp  halovoid_h.hpp
modules/: mock.html  simulation.html  theory.html  util.html
pyexshalos/: simulation.py  theory.py
pyexshalos/lib/: __init__.py
src/analytical/: fftlog.c
src/exshalos/: fftlog.c
src/halovoid/: finder.cpp  halovoid.cpp  halovoid_h.cpp
tests/: test_halovoid.py  test_mock.py
tutorials/: halo_bias.html  halo_catalogues.html  multi_hod.html
