[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme", "numpy"]
build-backend = "hatchling.build"

[project]
name = "pyexshalos"
version = "1.0.0"
description = "A pyhon package for ExSHalos"
authors = [
    {name = "Rodrigo Voivodic", email = "rodrigo.voivodic@gmail.com"}
]
dependencies = [
    "numpy",
    "scipy",
]

[tool.hatch.build.targets.wheel]
artifacts = ["zig-out/lib/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_backend.py"
