[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme", "numpy"]
build-backend = "hatchling.build"

[project]
name = "pyexshalos"
version = "1.0.1"
description = "A pyhon package for ExSHalos"
authors = [{ name = "Rodrigo Voivodic", email = "rodrigo.voivodic@gmail.com" }]
dependencies = ["numpy", "scipy"]

[tool.hatch.build.targets.wheel]
artifacts = ["pyexshalos/lib/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_backend.py"
